--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,3 +14,10 @@ spring:
 
   flyway:
     enabled: true
+
+  gemini:
+    api:
+      url: https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent?key=YOUR_API_KEY
+
+  api:
+    key: ${KEY_GEMINI}
