--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
     name: SmartFridgeAi
 
   datasource:
-    url: jdbc:mysql://localhost:3306/smartfridge
+    url: jdbc:mysql://localhost:3306/tripplannerai
     username: root
     password: root
     driver-class-name: com.mysql.cj.jdbc.Driver
